docs/apache-airflow-providers-google/6.3.0/_sources/_api/airflow/providers/google/cloud/operators/stackdriver/index.rst.txt
:py:mod:`airflow.providers.google.cloud.operators.stackdriver`
==============================================================

.. py:module:: airflow.providers.google.cloud.operators.stackdriver


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.google.cloud.operators.stackdriver.StackdriverListAlertPoliciesOperator
   airflow.providers.google.cloud.operators.stackdriver.StackdriverEnableAlertPoliciesOperator
   airflow.providers.google.cloud.operators.stackdriver.StackdriverDisableAlertPoliciesOperator
   airflow.providers.google.cloud.operators.stackdriver.StackdriverUpsertAlertOperator
   airflow.providers.google.cloud.operators.stackdriver.StackdriverDeleteAlertOperator
   airflow.providers.google.cloud.operators.stackdriver.StackdriverListNotificationChannelsOperator
   airflow.providers.google.cloud.operators.stackdriver.StackdriverEnableNotificationChannelsOperator
   airflow.providers.google.cloud.operators.stackdriver.StackdriverDisableNotificationChannelsOperator
   airflow.providers.google.cloud.operators.stackdriver.StackdriverUpsertNotificationChannelOperator
   airflow.providers.google.cloud.operators.stackdriver.StackdriverDeleteNotificationChannelOperator




.. py:class:: StackdriverListAlertPoliciesOperator(*, format_: Optional[str] = None, filter_: Optional[str] = None, order_by: Optional[str] = None, page_size: Optional[int] = None, retry: Optional[str] = DEFAULT, timeout: Optional[float] = None, metadata: Sequence[Tuple[str, str]] = (), gcp_conn_id: str = 'google_cloud_default', project_id: Optional[str] = None, delegate_to: Optional[str] = None, impersonation_chain: Optional[Union[str, Sequence[str]]] = None, **kwargs)

   Bases: :py:obj:`airflow.models.BaseOperator`

   Fetches all the Alert Policies identified by the filter passed as
   filter parameter. The desired return type can be specified by the
   format parameter, the supported formats are "dict", "json" and None
   which returns python dictionary, stringified JSON and protobuf
   respectively.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:StackdriverListAlertPoliciesOperator`

   :param format_: (Optional) Desired output format of the result. The
       supported formats are "dict", "json" and None which returns
       python dictionary, stringified JSON and protobuf respectively.
   :type format_: str
   :param filter_:  If provided, this field specifies the criteria that must be met by alert
       policies to be included in the response.
       For more details, see https://cloud.google.com/monitoring/api/v3/sorting-and-filtering.
   :type filter_: str
   :param order_by: A comma-separated list of fields by which to sort the result.
       Supports the same set of field references as the ``filter`` field. Entries
       can be prefixed with a minus sign to sort by the field in descending order.
       For more details, see https://cloud.google.com/monitoring/api/v3/sorting-and-filtering.
   :type order_by: str
   :param page_size: The maximum number of resources contained in the
       underlying API response. If page streaming is performed per-
       resource, this parameter does not affect the return value. If page
       streaming is performed per-page, this determines the maximum number
       of resources in a page.
   :type page_size: int
   :param retry: A retry object used to retry requests. If ``None`` is
       specified, requests will be retried using a default configuration.
   :type retry: str
   :param timeout: The amount of time, in seconds, to wait
       for the request to complete. Note that if ``retry`` is
       specified, the timeout applies to each individual attempt.
   :type timeout: float
   :param metadata: Additional metadata that is provided to the method.
   :type metadata: Sequence[Tuple[str, str]]
   :param gcp_conn_id: (Optional) The connection ID used to connect to Google
       Cloud Platform.
   :type gcp_conn_id: str
   :param project_id: The project to fetch alerts from.
   :type project_id: str
   :param delegate_to: The account to impersonate using domain-wide delegation of authority,
       if any. For this to work, the service account making the request must have
       domain-wide delegation enabled.
   :type delegate_to: str
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).
   :type impersonation_chain: Union[str, Sequence[str]]

   .. py:attribute:: template_fields
      :annotation: :Sequence[str] = ['filter_', 'impersonation_chain']

      

   .. py:attribute:: ui_color
      :annotation: = #e5ffcc

      

   .. py:method:: execute(self, context: airflow.utils.context.Context)

      This is the main method to derive when creating an operator.
      Context is the same dictionary used as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: StackdriverEnableAlertPoliciesOperator(*, filter_: Optional[str] = None, retry: Optional[str] = DEFAULT, timeout: Optional[float] = None, metadata: Sequence[Tuple[str, str]] = (), gcp_conn_id: str = 'google_cloud_default', project_id: Optional[str] = None, delegate_to: Optional[str] = None, impersonation_chain: Optional[Union[str, Sequence[str]]] = None, **kwargs)

   Bases: :py:obj:`airflow.models.BaseOperator`

   Enables one or more disabled alerting policies identified by filter
   parameter. Inoperative in case the policy is already enabled.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:StackdriverEnableAlertPoliciesOperator`

   :param filter_:  If provided, this field specifies the criteria that
       must be met by alert policies to be enabled.
       For more details, see https://cloud.google.com/monitoring/api/v3/sorting-and-filtering.
   :type filter_: str
   :param retry: A retry object used to retry requests. If ``None`` is
       specified, requests will be retried using a default configuration.
   :type retry: str
   :param timeout: The amount of time, in seconds, to wait
       for the request to complete. Note that if ``retry`` is
       specified, the timeout applies to each individual attempt.
   :type timeout: float
   :param metadata: Additional metadata that is provided to the method.
   :type metadata: Sequence[Tuple[str, str]]
   :param gcp_conn_id: (Optional) The connection ID used to connect to Google
       Cloud Platform.
   :type gcp_conn_id: str
   :param project_id: The project in which alert needs to be enabled.
   :type project_id: str
   :param delegate_to: The account to impersonate using domain-wide delegation of authority,
       if any. For this to work, the service account making the request must have
       domain-wide delegation enabled.
   :type delegate_to: str
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).
   :type impersonation_chain: Union[str, Sequence[str]]

   .. py:attribute:: ui_color
      :annotation: = #e5ffcc

      

   .. py:attribute:: template_fields
      :annotation: :Sequence[str] = ['filter_', 'impersonation_chain']

      

   .. py:method:: execute(self, context: airflow.utils.context.Context)

      This is the main method to derive when creating an operator.
      Context is the same dictionary used as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: StackdriverDisableAlertPoliciesOperator(*, filter_: Optional[str] = None, retry: Optional[str] = DEFAULT, timeout: Optional[float] = None, metadata: Sequence[Tuple[str, str]] = (), gcp_conn_id: str = 'google_cloud_default', project_id: Optional[str] = None, delegate_to: Optional[str] = None, impersonation_chain: Optional[Union[str, Sequence[str]]] = None, **kwargs)

   Bases: :py:obj:`airflow.models.BaseOperator`

   Disables one or more enabled alerting policies identified by filter
   parameter. Inoperative in case the policy is already disabled.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:StackdriverDisableAlertPoliciesOperator`

   :param filter_:  If provided, this field specifies the criteria that
       must be met by alert policies to be disabled.
       For more details, see https://cloud.google.com/monitoring/api/v3/sorting-and-filtering.
   :type filter_: str
   :param retry: A retry object used to retry requests. If ``None`` is
       specified, requests will be retried using a default configuration.
   :type retry: str
   :param timeout: The amount of time, in seconds, to wait
       for the request to complete. Note that if ``retry`` is
       specified, the timeout applies to each individual attempt.
   :type timeout: float
   :param metadata: Additional metadata that is provided to the method.
   :type metadata: Sequence[Tuple[str, str]]
   :param gcp_conn_id: (Optional) The connection ID used to connect to Google
       Cloud Platform.
   :type gcp_conn_id: str
   :param project_id: The project in which alert needs to be disabled.
   :type project_id: str
   :param delegate_to: The account to impersonate using domain-wide delegation of authority,
       if any. For this to work, the service account making the request must have
       domain-wide delegation enabled.
   :type delegate_to: str
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).
   :type impersonation_chain: Union[str, Sequence[str]]

   .. py:attribute:: ui_color
      :annotation: = #e5ffcc

      

   .. py:attribute:: template_fields
      :annotation: :Sequence[str] = ['filter_', 'impersonation_chain']

      

   .. py:method:: execute(self, context: airflow.utils.context.Context)

      This is the main method to derive when creating an operator.
      Context is the same dictionary used as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: StackdriverUpsertAlertOperator(*, alerts: str, retry: Optional[str] = DEFAULT, timeout: Optional[float] = None, metadata: Sequence[Tuple[str, str]] = (), gcp_conn_id: str = 'google_cloud_default', project_id: Optional[str] = None, delegate_to: Optional[str] = None, impersonation_chain: Optional[Union[str, Sequence[str]]] = None, **kwargs)

   Bases: :py:obj:`airflow.models.BaseOperator`

   Creates a new alert or updates an existing policy identified
   the name field in the alerts parameter.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:StackdriverUpsertAlertOperator`

   :param alerts: A JSON string or file that specifies all the alerts that needs
       to be either created or updated. For more details, see
       https://cloud.google.com/monitoring/api/ref_v3/rest/v3/projects.alertPolicies#AlertPolicy.
       (templated)
   :type alerts: str
   :param retry: A retry object used to retry requests. If ``None`` is
       specified, requests will be retried using a default configuration.
   :type retry: str
   :param timeout: The amount of time, in seconds, to wait
       for the request to complete. Note that if ``retry`` is
       specified, the timeout applies to each individual attempt.
   :type timeout: float
   :param metadata: Additional metadata that is provided to the method.
   :type metadata: Sequence[Tuple[str, str]]
   :param gcp_conn_id: (Optional) The connection ID used to connect to Google
       Cloud Platform.
   :type gcp_conn_id: str
   :param project_id: The project in which alert needs to be created/updated.
   :type project_id: str
   :param delegate_to: The account to impersonate using domain-wide delegation of authority,
       if any. For this to work, the service account making the request must have
       domain-wide delegation enabled.
   :type delegate_to: str
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).
   :type impersonation_chain: Union[str, Sequence[str]]

   .. py:attribute:: template_fields
      :annotation: :Sequence[str] = ['alerts', 'impersonation_chain']

      

   .. py:attribute:: template_ext
      :annotation: :Sequence[str] = ['.json']

      

   .. py:attribute:: ui_color
      :annotation: = #e5ffcc

      

   .. py:method:: execute(self, context: airflow.utils.context.Context)

      This is the main method to derive when creating an operator.
      Context is the same dictionary used as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: StackdriverDeleteAlertOperator(*, name: str, retry: Optional[str] = DEFAULT, timeout: Optional[float] = None, metadata: Sequence[Tuple[str, str]] = (), gcp_conn_id: str = 'google_cloud_default', project_id: Optional[str] = None, delegate_to: Optional[str] = None, impersonation_chain: Optional[Union[str, Sequence[str]]] = None, **kwargs)

   Bases: :py:obj:`airflow.models.BaseOperator`

   Deletes an alerting policy.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:StackdriverDeleteAlertOperator`

   :param name: The alerting policy to delete. The format is:
                    ``projects/[PROJECT_ID]/alertPolicies/[ALERT_POLICY_ID]``.
   :type name: str
   :param retry: A retry object used to retry requests. If ``None`` is
       specified, requests will be retried using a default configuration.
   :type retry: str
   :param timeout: The amount of time, in seconds, to wait
       for the request to complete. Note that if ``retry`` is
       specified, the timeout applies to each individual attempt.
   :type timeout: float
   :param metadata: Additional metadata that is provided to the method.
   :type metadata: Sequence[Tuple[str, str]]
   :param gcp_conn_id: (Optional) The connection ID used to connect to Google
       Cloud Platform.
   :type gcp_conn_id: str
   :param project_id: The project from which alert needs to be deleted.
   :type project_id: str
   :param delegate_to: The account to impersonate using domain-wide delegation of authority,
       if any. For this to work, the service account making the request must have
       domain-wide delegation enabled.
   :type delegate_to: str
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).
   :type impersonation_chain: Union[str, Sequence[str]]

   .. py:attribute:: template_fields
      :annotation: :Sequence[str] = ['name', 'impersonation_chain']

      

   .. py:attribute:: ui_color
      :annotation: = #e5ffcc

      

   .. py:method:: execute(self, context: airflow.utils.context.Context)

      This is the main method to derive when creating an operator.
      Context is the same dictionary used as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: StackdriverListNotificationChannelsOperator(*, format_: Optional[str] = None, filter_: Optional[str] = None, order_by: Optional[str] = None, page_size: Optional[int] = None, retry: Optional[str] = DEFAULT, timeout: Optional[float] = None, metadata: Sequence[Tuple[str, str]] = (), gcp_conn_id: str = 'google_cloud_default', project_id: Optional[str] = None, delegate_to: Optional[str] = None, impersonation_chain: Optional[Union[str, Sequence[str]]] = None, **kwargs)

   Bases: :py:obj:`airflow.models.BaseOperator`

   Fetches all the Notification Channels identified by the filter passed as
   filter parameter. The desired return type can be specified by the
   format parameter, the supported formats are "dict", "json" and None
   which returns python dictionary, stringified JSON and protobuf
   respectively.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:StackdriverListNotificationChannelsOperator`

   :param format_: (Optional) Desired output format of the result. The
       supported formats are "dict", "json" and None which returns
       python dictionary, stringified JSON and protobuf respectively.
   :type format_: str
   :param filter_:  If provided, this field specifies the criteria that
       must be met by notification channels to be included in the response.
       For more details, see https://cloud.google.com/monitoring/api/v3/sorting-and-filtering.
   :type filter_: str
   :param order_by: A comma-separated list of fields by which to sort the result.
       Supports the same set of field references as the ``filter`` field. Entries
       can be prefixed with a minus sign to sort by the field in descending order.
       For more details, see https://cloud.google.com/monitoring/api/v3/sorting-and-filtering.
   :type order_by: str
   :param page_size: The maximum number of resources contained in the
       underlying API response. If page streaming is performed per-
       resource, this parameter does not affect the return value. If page
       streaming is performed per-page, this determines the maximum number
       of resources in a page.
   :type page_size: int
   :param retry: A retry object used to retry requests. If ``None`` is
       specified, requests will be retried using a default configuration.
   :type retry: str
   :param timeout: The amount of time, in seconds, to wait
       for the request to complete. Note that if ``retry`` is
       specified, the timeout applies to each individual attempt.
   :type timeout: float
   :param metadata: Additional metadata that is provided to the method.
   :type metadata: Sequence[Tuple[str, str]]
   :param gcp_conn_id: (Optional) The connection ID used to connect to Google
       Cloud Platform.
   :type gcp_conn_id: str
   :param project_id: The project to fetch notification channels from.
   :type project_id: str
   :param delegate_to: The account to impersonate using domain-wide delegation of authority,
       if any. For this to work, the service account making the request must have
       domain-wide delegation enabled.
   :type delegate_to: str
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).
   :type impersonation_chain: Union[str, Sequence[str]]

   .. py:attribute:: template_fields
      :annotation: :Sequence[str] = ['filter_', 'impersonation_chain']

      

   .. py:attribute:: ui_color
      :annotation: = #e5ffcc

      

   .. py:method:: execute(self, context: airflow.utils.context.Context)

      This is the main method to derive when creating an operator.
      Context is the same dictionary used as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: StackdriverEnableNotificationChannelsOperator(*, filter_: Optional[str] = None, retry: Optional[str] = DEFAULT, timeout: Optional[float] = None, metadata: Sequence[Tuple[str, str]] = (), gcp_conn_id: str = 'google_cloud_default', project_id: Optional[str] = None, delegate_to: Optional[str] = None, impersonation_chain: Optional[Union[str, Sequence[str]]] = None, **kwargs)

   Bases: :py:obj:`airflow.models.BaseOperator`

   Enables one or more disabled alerting policies identified by filter
   parameter. Inoperative in case the policy is already enabled.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:StackdriverEnableNotificationChannelsOperator`

   :param filter_:  If provided, this field specifies the criteria that
       must be met by notification channels to be enabled.
       For more details, see https://cloud.google.com/monitoring/api/v3/sorting-and-filtering.
   :type filter_: str
   :param retry: A retry object used to retry requests. If ``None`` is
       specified, requests will be retried using a default configuration.
   :type retry: str
   :param timeout: The amount of time, in seconds, to wait
       for the request to complete. Note that if ``retry`` is
       specified, the timeout applies to each individual attempt.
   :type timeout: float
   :param metadata: Additional metadata that is provided to the method.
   :type metadata: Sequence[Tuple[str, str]]
   :param gcp_conn_id: (Optional) The connection ID used to connect to Google
       Cloud Platform.
   :type gcp_conn_id: str
   :param project_id: The location used for the operation.
   :type project_id: str
   :param delegate_to: The account to impersonate using domain-wide delegation of authority,
       if any. For this to work, the service account making the request must have
       domain-wide delegation enabled.
   :type delegate_to: str
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).
   :type impersonation_chain: Union[str, Sequence[str]]

   .. py:attribute:: template_fields
      :annotation: :Sequence[str] = ['filter_', 'impersonation_chain']

      

   .. py:attribute:: ui_color
      :annotation: = #e5ffcc

      

   .. py:method:: execute(self, context: airflow.utils.context.Context)

      This is the main method to derive when creating an operator.
      Context is the same dictionary used as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: StackdriverDisableNotificationChannelsOperator(*, filter_: Optional[str] = None, retry: Optional[str] = DEFAULT, timeout: Optional[float] = None, metadata: Sequence[Tuple[str, str]] = (), gcp_conn_id: str = 'google_cloud_default', project_id: Optional[str] = None, delegate_to: Optional[str] = None, impersonation_chain: Optional[Union[str, Sequence[str]]] = None, **kwargs)

   Bases: :py:obj:`airflow.models.BaseOperator`

   Disables one or more enabled notification channels identified by filter
   parameter. Inoperative in case the policy is already disabled.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:StackdriverDisableNotificationChannelsOperator`

   :param filter_:  If provided, this field specifies the criteria that
       must be met by alert policies to be disabled.
       For more details, see https://cloud.google.com/monitoring/api/v3/sorting-and-filtering.
   :type filter_: str
   :param retry: A retry object used to retry requests. If ``None`` is
       specified, requests will be retried using a default configuration.
   :type retry: str
   :param timeout: The amount of time, in seconds, to wait
       for the request to complete. Note that if ``retry`` is
       specified, the timeout applies to each individual attempt.
   :type timeout: float
   :param metadata: Additional metadata that is provided to the method.
   :type metadata: Sequence[Tuple[str, str]]
   :param gcp_conn_id: (Optional) The connection ID used to connect to Google
       Cloud Platform.
   :type gcp_conn_id: str
   :param project_id: The project in which notification channels needs to be enabled.
   :type project_id: str
   :param delegate_to: The account to impersonate using domain-wide delegation of authority,
       if any. For this to work, the service account making the request must have
       domain-wide delegation enabled.
   :type delegate_to: str
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).
   :type impersonation_chain: Union[str, Sequence[str]]

   .. py:attribute:: template_fields
      :annotation: :Sequence[str] = ['filter_', 'impersonation_chain']

      

   .. py:attribute:: ui_color
      :annotation: = #e5ffcc

      

   .. py:method:: execute(self, context: airflow.utils.context.Context)

      This is the main method to derive when creating an operator.
      Context is the same dictionary used as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: StackdriverUpsertNotificationChannelOperator(*, channels: str, retry: Optional[str] = DEFAULT, timeout: Optional[float] = None, metadata: Sequence[Tuple[str, str]] = (), gcp_conn_id: str = 'google_cloud_default', project_id: Optional[str] = None, delegate_to: Optional[str] = None, impersonation_chain: Optional[Union[str, Sequence[str]]] = None, **kwargs)

   Bases: :py:obj:`airflow.models.BaseOperator`

   Creates a new notification or updates an existing notification channel
   identified the name field in the alerts parameter.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:StackdriverUpsertNotificationChannelOperator`

   :param channels: A JSON string or file that specifies all the alerts that needs
       to be either created or updated. For more details, see
       https://cloud.google.com/monitoring/api/ref_v3/rest/v3/projects.notificationChannels.
       (templated)
   :type channels: str
   :param retry: A retry object used to retry requests. If ``None`` is
       specified, requests will be retried using a default configuration.
   :type retry: str
   :param timeout: The amount of time, in seconds, to wait
       for the request to complete. Note that if ``retry`` is
       specified, the timeout applies to each individual attempt.
   :type timeout: float
   :param metadata: Additional metadata that is provided to the method.
   :type metadata: Sequence[Tuple[str, str]]
   :param gcp_conn_id: (Optional) The connection ID used to connect to Google
       Cloud Platform.
   :type gcp_conn_id: str
   :param project_id: The project in which notification channels needs to be created/updated.
   :type project_id: str
   :param delegate_to: The account to impersonate using domain-wide delegation of authority,
       if any. For this to work, the service account making the request must have
       domain-wide delegation enabled.
   :type delegate_to: str
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).
   :type impersonation_chain: Union[str, Sequence[str]]

   .. py:attribute:: template_fields
      :annotation: :Sequence[str] = ['channels', 'impersonation_chain']

      

   .. py:attribute:: template_ext
      :annotation: :Sequence[str] = ['.json']

      

   .. py:attribute:: ui_color
      :annotation: = #e5ffcc

      

   .. py:method:: execute(self, context: airflow.utils.context.Context)

      This is the main method to derive when creating an operator.
      Context is the same dictionary used as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: StackdriverDeleteNotificationChannelOperator(*, name: str, retry: Optional[str] = DEFAULT, timeout: Optional[float] = None, metadata: Sequence[Tuple[str, str]] = (), gcp_conn_id: str = 'google_cloud_default', project_id: Optional[str] = None, delegate_to: Optional[str] = None, impersonation_chain: Optional[Union[str, Sequence[str]]] = None, **kwargs)

   Bases: :py:obj:`airflow.models.BaseOperator`

   Deletes a notification channel.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:StackdriverDeleteNotificationChannelOperator`

   :param name: The alerting policy to delete. The format is:
                    ``projects/[PROJECT_ID]/notificationChannels/[CHANNEL_ID]``.
   :type name: str
   :param retry: A retry object used to retry requests. If ``None`` is
       specified, requests will be retried using a default configuration.
   :type retry: str
   :param timeout: The amount of time, in seconds, to wait
       for the request to complete. Note that if ``retry`` is
       specified, the timeout applies to each individual attempt.
   :type timeout: float
   :param metadata: Additional metadata that is provided to the method.
   :type metadata: Sequence[Tuple[str, str]]
   :param gcp_conn_id: (Optional) The connection ID used to connect to Google
       Cloud Platform.
   :type gcp_conn_id: str
   :param project_id: The project from which notification channel needs to be deleted.
   :type project_id: str
   :param delegate_to: The account to impersonate using domain-wide delegation of authority,
       if any. For this to work, the service account making the request must have
       domain-wide delegation enabled.
   :type delegate_to: str
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).
   :type impersonation_chain: Union[str, Sequence[str]]

   .. py:attribute:: template_fields
      :annotation: :Sequence[str] = ['name', 'impersonation_chain']

      

   .. py:attribute:: ui_color
      :annotation: = #e5ffcc

      

   .. py:method:: execute(self, context: airflow.utils.context.Context)

      This is the main method to derive when creating an operator.
      Context is the same dictionary used as when rendering jinja templates.

      Refer to get_template_context for more context.



